--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
-    "env-cmd": "^10.1.0",
     "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
